# gr4-blocklib-build-concept

./: BlockLibMacros.cmake.in  CMakeLists.txt  README.md
blocks/: CMakeLists.txt
blocks/basic/: CMakeLists.txt
blocks/basic/include/gnuradio-4.x/basic/: block0.hpp  block1.hpp  block2.hpp  block3.hpp  blockN.hpp
blocks/math/: CMakeLists.txt
example/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt  gr_registry.hpp
src/: CMakeLists.txt  dummy.cpp  gr_registry.cpp
tools/: parse_registrations.cpp
